fixed spacing

--- a/css/layout.css
+++ b/css/layout.css
@@ -144,6 +144,12 @@ body {
   gap: 16px;
 }
 
+#project-header2 {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
 .project-header-image {
   width: 50%;
   height: 50%;
