--- a/css/typography.css
+++ b/css/typography.css
@@ -48,6 +48,13 @@ body {
   margin-top: 100px
 }
 
+.main-title5{
+  font-size: 48px;
+  font-weight: 700;
+  margin-bottom: -5%;
+  margin-left: 11.5%;
+}
+
 .subheader-text {
   font-size: 20px;
   font-weight: 700;
